[gd_scene load_steps=9 format=3 uid="uid://dw0ik3c6ox3c6"]

[ext_resource type="Texture2D" uid="uid://bdomhhx1bgpdu" path="res://sprites/saucer.png" id="1_3nh3t"]
[ext_resource type="Script" path="res://small_saucer.gd" id="1_qnn87"]
[ext_resource type="PackedScene" uid="uid://bu34kpbmg1nlk" path="res://bullet.tscn" id="2_43ixx"]
[ext_resource type="Script" path="res://velocity_component.gd" id="2_wlmr5"]
[ext_resource type="Script" path="res://edge_component.gd" id="5_nw75i"]
[ext_resource type="AudioStream" uid="uid://c0p1f7qfmgryk" path="res://audio/saucer_shoot.wav" id="6_xg4we"]
[ext_resource type="AudioStream" uid="uid://d3nftvrypqho1" path="res://audio/saucer_spawn.wav" id="7_mbqf1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_565wf"]
radius = 24.0
height = 70.0

[node name="SmallSaucer" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_qnn87")
bulletScene = ExtResource("2_43ixx")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(2, 0, 0, 1)
texture = ExtResource("1_3nh3t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_565wf")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("2_wlmr5")
maxSpeed = 200.0

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ChangeDirectionTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="EdgeComponent" type="Node2D" parent="."]
script = ExtResource("5_nw75i")

[node name="BulletSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_xg4we")
volume_db = -13.0
max_distance = 5000.0
attenuation = 1e-05
max_polyphony = 10

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_mbqf1")
max_distance = 5000.0
attenuation = 1e-05
max_polyphony = 10

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="shoot"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="changeDirection"]
